--- a/admission prediction.ipynb
+++ b/admission prediction.ipynb
@@ -21,6 +21,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import warnings\n",
+    "from ydata_profiling import ProfileReport"
     "warnings.filterwarnings(\"ignore\")"
    ]
   },
